[gd_scene load_steps=2 format=3 uid="uid://i5ihkfikrqbh"]

[ext_resource type="Script" path="res://scripts/attribute_edit_container.gd" id="1_exsxd"]

[node name="AttributeEditContainer" type="HBoxContainer"]
alignment = 1
script = ExtResource("1_exsxd")

[node name="AttributeName" type="Label" parent="."]
layout_mode = 2
text = "Attribute: "

[node name="EditValue" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
